--- a/airsonic-main/src/main/resources/templates/top.html
+++ b/airsonic-main/src/main/resources/templates/top.html
@@ -34,17 +34,17 @@
         }
 
         function setConnectedImage() {
-            $("#connectionStatus img").attr("src", /*[[${#themes.code('connectedImage')}]]*/ "/images/connected.png");
+            $("#connectionStatus img").attr("src", /*[[${themes.get('connectedImage')}]]*/ "/images/connected.png");
             $("#connectionStatus div").text(/*[[#{top.connected}]]*/ "Connected");
         }
 
         function setDisconnectedImage() {
-            $("#connectionStatus img").attr("src", /*[[${#themes.code('disconnectedImage')}]]*/ "/images/disconnected.png");
+            $("#connectionStatus img").attr("src", /*[[${themes.get('disconnectedImage')}]]*/ "/images/disconnected.png");
             $("#connectionStatus div").text(/*[[#{top.disconnected}]]*/ "Disconnected");
         }
 
         function setConnectingImage() {
-            $("#connectionStatus img").attr("src", /*[[${#themes.code('connectingImage')}]]*/ "/images/connecting.gif");
+            $("#connectionStatus img").attr("src", /*[[${themes.get('connectingImage')}]]*/ "/images/connecting.gif");
             $("#connectionStatus div").text(/*[[#{top.connecting}]]*/ "Connecting");
         }
 
@@ -122,47 +122,47 @@
 <table style="margin:0;padding-top:5px">
     <tr>
         <td style="padding-right:4.5em;">
-            <img id="show-left-frame" th:src="${#themes.code('sidebarImage')}" onclick="showLeftFrame()" alt="" th:style="|${model.showSideBar ? 'display:none' : 'display:inline'};cursor:pointer|">
-            <img id="hide-left-frame" th:src="${#themes.code('sidebarImage')}" onclick="hideLeftFrame()" alt="" th:style="|${model.showSideBar ? 'display:inline' : 'display:none'};cursor:pointer|">
+            <img id="show-left-frame" th:src="${themes.get('sidebarImage')}" onclick="showLeftFrame()" alt="" th:style="|${model.showSideBar ? 'display:none' : 'display:inline'};cursor:pointer|">
+            <img id="hide-left-frame" th:src="${themes.get('sidebarImage')}" onclick="hideLeftFrame()" alt="" th:style="|${model.showSideBar ? 'display:inline' : 'display:none'};cursor:pointer|">
         </td>
         <td style="min-width:3em;padding-right:1em;text-align: center">
-            <a th:href="@{/home}" target="main"><img th:src="${#themes.code('homeImage')}" th:title="#{top.home}" th:alt="#{top.home}" style="max-width:24px"></a>
+            <a th:href="@{/home}" target="main"><img th:src="${themes.get('homeImage')}" th:title="#{top.home}" th:alt="#{top.home}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/home}" target="main" th:utext="#{top.home}">Home</a></div>
         </td>
         <td style="min-width:3em;padding-right:1em;text-align: center">
-            <a th:href="@{/nowPlaying}" target="main"><img th:src="${#themes.code('nowPlayingImage')}" th:title="#{top.now_playing}" th:alt="#{top.now_playing}" style="max-width:24px"></a>
+            <a th:href="@{/nowPlaying}" target="main"><img th:src="${themes.get('nowPlayingImage')}" th:title="#{top.now_playing}" th:alt="#{top.now_playing}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/nowPlaying}" target="main" th:utext="#{top.now_playing}">Top Now Playing</a></div>
         </td>
         <td style="min-width:3em;padding-right:1em;text-align: center">
-            <a th:href="@{/starred}" target="main"><img th:src="${#themes.code('starredImage')}" th:title="#{top.starred}" th:alt="#{top.starred}" style="max-width:24px"></a>
+            <a th:href="@{/starred}" target="main"><img th:src="${themes.get('starredImage')}" th:title="#{top.starred}" th:alt="#{top.starred}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/starred}" target="main" th:utext="#{top.starred}">Starred</a></div>
         </td>
         <td style="min-width:3em;padding-right:1em;text-align: center">
-            <a th:href="@{/playlists}" target="main"><img th:src="${#themes.code('playlistImage')}" th:title="#{left.playlists}" th:alt="#{left.playlists}" style="max-width:24px"></a>
+            <a th:href="@{/playlists}" target="main"><img th:src="${themes.get('playlistImage')}" th:title="#{left.playlists}" th:alt="#{left.playlists}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/playlists}" target="main" th:utext="#{left.playlists}">Playlists</a></div>
         </td>
         <td style="min-width:4em;padding-right:1em;text-align: center">
-            <a th:href="@{/podcastChannels}" target="main"><img th:src="${#themes.code('podcastLargeImage')}" th:title="#{top.podcast}" th:alt="#{top.podcast}" style="max-width:24px"></a>
+            <a th:href="@{/podcastChannels}" target="main"><img th:src="${themes.get('podcastLargeImage')}" th:title="#{top.podcast}" th:alt="#{top.podcast}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/podcastChannels}" target="main" th:utext="#{top.podcast}">Podcast</a></div>
         </td>
         <td style="min-width:4em;padding-right:1em;text-align: center">
-            <a th:href="@{/bookmarks}" target="main"><img th:src="${#themes.code('bookmarkImage')}" th:title="#{top.bookmarks}" th:alt="#{top.bookmarks}" style="max-width:24px"></a>
+            <a th:href="@{/bookmarks}" target="main"><img th:src="${themes.get('bookmarkImage')}" th:title="#{top.bookmarks}" th:alt="#{top.bookmarks}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/bookmarks}" target="main" th:utext="#{top.bookmarks}">Bookmarks</a></div>
         </td>
         <td th:if="${model.user.settingsRole}" style="min-width:3em;padding-right:1em;text-align: center">
-            <a th:href="@{/settings}" target="main"><img th:src="${#themes.code('settingsImage')}" th:title="#{top.settings}" th:alt="#{top.settings}" style="max-width:24px"></a>
+            <a th:href="@{/settings}" target="main"><img th:src="${themes.get('settingsImage')}" th:title="#{top.settings}" th:alt="#{top.settings}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/settings}" target="main" th:utext="#{top.settings}">Settings</a></div>
         </td>
         <td style="min-width:3em;padding-right:1em;text-align: center">
-            <a th:href="@{/status}" target="main"><img th:src="${#themes.code('statusImage')}" th:title="#{top.status}" th:alt="#{top.status}" style="max-width:24px"></a>
+            <a th:href="@{/status}" target="main"><img th:src="${themes.get('statusImage')}" th:title="#{top.status}" th:alt="#{top.status}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/status}" target="main" th:utext="#{top.status}">Status</a></div>
         </td>
         <td style="min-width:3em;padding-right:1em;text-align: center">
-            <a th:href="@{/more}" target="main"><img th:src="${#themes.code('moreImage')}" th:title="#{top.more}" th:alt="#{top.more}" style="max-width:24px"></a>
+            <a th:href="@{/more}" target="main"><img th:src="${themes.get('moreImage')}" th:title="#{top.more}" th:alt="#{top.more}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/more}" target="main" th:utext="#{top.more}">More</a></div>
         </td>
         <td style="min-width:3em;padding-right:1em;text-align: center">
-            <a th:href="@{/help}" target="main"><img th:src="${#themes.code('helpImage')}" th:title="#{top.help}" th:alt="#{top.help}" style="max-width:24px"></a>
+            <a th:href="@{/help}" target="main"><img th:src="${themes.get('helpImage')}" th:title="#{top.help}" th:alt="#{top.help}" style="max-width:24px"></a>
             <div class="topHeader"><a th:href="@{/help}" target="main" th:utext="#{top.help}">Help</a></div>
         </td>
 
@@ -170,7 +170,7 @@
             <form method="post" th:action="@{/search}" target="main" name="searchForm">
                 <td><input required type="text" name="query" id="query" size="28" th:placeholder="#{top.search}" onclick="select();"
                            onkeyup="triggerInstantSearch();"></td>
-                <td><a href="javascript:document.searchForm.submit()"><img th:src="${#themes.code('searchImage')}" th:alt="#{top.search}" th:title="#{top.search}"></a></td>
+                <td><a href="javascript:document.searchForm.submit()"><img th:src="${themes.get('searchImage')}" th:alt="#{top.search}" th:title="#{top.search}"></a></td>
             </form>
         </td>
 
@@ -180,7 +180,7 @@
                 <img th:if="${model.showAvatar}"
                      th:src="@{/avatar(username=${model.user.username})}" th:alt="#{status.user}" width="30" height="30">
                 <img th:unless="${model.showAvatar}"
-                     th:src="${#themes.code('userImage')}" th:alt="#{status.user}" height="24">
+                     th:src="${themes.get('userImage')}" th:alt="#{status.user}" height="24">
               </a>
 
 
@@ -193,14 +193,14 @@
 
         <td style="padding-left:15pt;padding-right:5pt;width: 100%;text-align: center">
             <a id="connectionStatus" href="javascript:void(0)" onclick="toggleConnectionStatus();">
-                <img th:src="${#themes.code('disconnectedImage')}" alt="connect" height="24">
+                <img th:src="${themes.get('disconnectedImage')}" alt="connect" height="24">
                 <div class="detail" th:utext="#{top.disconnected}">Disconnected</div>
             </a>
         </td>
 
         <td style="padding-left:15pt;padding-right:5pt;width: 100%;text-align: center">
             <a href="#" onclick="airsonicLogout();">
-                <img th:src="${#themes.code('logoutImage')}" alt="logout" height="24">
+                <img th:src="${themes.get('logoutImage')}" alt="logout" height="24">
                 <div class="detail" th:utext="#{top.logout}">Logout</div>
             </a>
         </td>
