--- a/airsonic-main/src/main/resources/templates/more.html
+++ b/airsonic-main/src/main/resources/templates/more.html
@@ -122,13 +122,13 @@
 <body class="mainframe bgcolor1">
 
 <h1>
-    <img th:src="${#themes.code('moreImage')}" alt=""/>
+    <img th:src="${themes.get('moreImage')}" alt=""/>
     <span style="vertical-align: middle" th:text="#{more.title}"></span>
 </h1>
 
 <th:block th:if="${model.user.streamRole}">
     <h2>
-        <img th:src="${#themes.code('shuffleImage')}" alt=""/>
+        <img th:src="@{${themes.get('shuffleImage')}}" alt=""/>
         <span style="vertical-align: middle" th:text="#{more.random.title}"></span>
     </h2>
 
@@ -262,20 +262,20 @@
 <a href="https://airsonic.github.io/docs/apps/" target="_blank" rel="noopener noreferrer"><img alt="Apps" th:src="@{/icons/default_light/apps.png}" style="float: right;margin-left: 3em; margin-right: 3em"/></a>
 
 <h2>
-    <img th:src="${#themes.code('androidImage')}" alt=""/>
+    <img th:src="${themes.get('androidImage')}" alt=""/>
     <span style="vertical-align: middle" th:text="#{more.apps.title}"></span>
 </h2>
 <span th:Utext="#{more.apps.text}"></span>
 
 
 <h2>
-    <img th:src="${#themes.code('statusSmallImage')}" alt=""/>
+    <img th:src="${themes.get('statusSmallImage')}" alt=""/>
     <span style="vertical-align: middle" th:text="#{more.status.title}"></span>
 </h2>
 <span th:Utext="#{more.status.text}"></span>
 
 <h2>
-    <img th:src="${#themes.code('podcastImage')}" alt=""/>
+    <img th:src="${themes.get('podcastImage')}" alt=""/>
     <span style="vertical-align: middle" th:text="#{more.podcast.title}"></span>
 </h2>
 <span th:utext="#{more.podcast.text}"></span>
@@ -283,7 +283,7 @@
 <th:block th:if="${model.user.uploadRole}">
 
     <h2>
-        <img th:src="${#themes.code('uploadImage')}" alt=""/>
+        <img th:src="${themes.get('uploadImage')}" alt=""/>
         <span style="vertical-align: middle" th:text="#{more.upload.title}"></span>
     </h2>
 
@@ -316,7 +316,7 @@
 
 <a name="shortcuts"></a>
 <h2>
-    <img th:src="${#themes.code('keyboardImage')}" alt=""/>
+    <img th:src="@{${themes.get('keyboardImage')}}" alt=""/>
     <span style="vertical-align: middle" th:text="#{more.keyboard.title}"></span>
 </h2>
 <span th:utext="#{more.keyboard.text}"></span>
