--- a/airsonic-main/src/main/resources/templates/podcastChannels.html
+++ b/airsonic-main/src/main/resources/templates/podcastChannels.html
@@ -85,7 +85,7 @@
                   searchable: false,
                   name: "play",
                   className: "fit not-draggable centeralign",
-                  defaultContent: "<img class='playSong' src=\"[(${#themes.code('playImage')})]\" style='height:18px;' alt=\"[(#{common.play})]\" title=\"[(#{common.play})]\">"
+                  defaultContent: "<img class='playSong' src=\"[(${themes.get('playImage')})]\" style='height:18px;' alt=\"[(#{common.play})]\" title=\"[(#{common.play})]\">"
                 },
                 { data: "title",
                   className: "detail fit songTitle",
@@ -129,7 +129,7 @@
                   className: "fit not-draggable centeralign",
                   render: function(data, type, row) {
                       if (type == "display") {
-                          return "<img class='removePodcast' src=\"[(${#themes.code('removeImage')})]\" style='height:18px;' alt=\"[(#{playlist.remove})]\" title=\"[(#{playlist.remove})]\">";
+                          return "<img class='removePodcast' src=\"[(${themes.get('removeImage')})]\" style='height:18px;' alt=\"[(#{playlist.remove})]\" title=\"[(#{playlist.remove})]\">";
                       }
                       return data;
                   }
@@ -219,21 +219,21 @@
                   visible: /*[[${model.user.streamRole and model['partyMode'] != true}]]*/ false,
                   name: "play",
                   className: "fit not-draggable centeralign",
-                  defaultContent: "<img class='playSong' src=\"[(${#themes.code('playImage')})]\" style='height:18px;' alt=\"[(#{common.play})]\" title=\"[(#{common.play})]\">"
+                  defaultContent: "<img class='playSong' src=\"[(${themes.get('playImage')})]\" style='height:18px;' alt=\"[(#{common.play})]\" title=\"[(#{common.play})]\">"
                 },
                 { data: null,
                   searchable: false,
                   visible: /*[[${model.user.streamRole and model['partyMode'] != true}]]*/ false,
                   name: "addLast",
                   className: "fit not-draggable centeralign",
-                  defaultContent: "<img class='addSongLast' src=\"[(${#themes.code('addImage')})]\" style='height:18px;' alt=\"[(#{common.add})]\" title=\"[(#{common.add})]\">"
+                  defaultContent: "<img class='addSongLast' src=\"[(${themes.get('addImage')})]\" style='height:18px;' alt=\"[(#{common.add})]\" title=\"[(#{common.add})]\">"
                 },
                 { data: null,
                   searchable: false,
                   visible: /*[[${model.user.streamRole and model['partyMode'] != true}]]*/ false,
                   name: "addNext",
                   className: "fit not-draggable centeralign",
-                  defaultContent: "<img class='addSongNext' src=\"[(${#themes.code('addNextImage')})]\" style='height:18px;' alt=\"[(#{main.addnext})]\" title=\"[(#{main.addnext})]\">"
+                  defaultContent: "<img class='addSongNext' src=\"[(${themes.get('addNextImage')})]\" style='height:18px;' alt=\"[(#{main.addnext})]\" title=\"[(#{main.addnext})]\">"
                 },
                 { data: "title",
                   className: "detail fit songTitle",
@@ -436,7 +436,7 @@
                   searchable: false,
                   name: "subscribe",
                   className: "fit not-draggable centeralign",
-                  defaultContent: "<img class='createChannel' src=\"[(${#themes.code('exportFileImage')})]\" style='height:18px;' alt=\"[(#{playlist2.export})]\" title=\"[(#{playlist2.export})]\">"
+                  defaultContent: "<img class='createChannel' src=\"[(${themes.get('exportFileImage')})]\" style='height:18px;' alt=\"[(#{playlist2.export})]\" title=\"[(#{playlist2.export})]\">"
                 }
             ]
         } );
@@ -661,13 +661,13 @@
 <body class="mainframe bgcolor1" onload="init()">
 
 <h1 style="padding-bottom: 1em">
-    <img th:src="${#themes.code('podcastLargeImage')}" alt="">
+    <img th:src="${themes.get('podcastLargeImage')}" alt="">
     <span style="vertical-align: middle" th:text="#{podcastreceiver.title}"></span>
 </h1>
 
 <div style="float:right;padding-right:1em">
-    <img id="viewAsList" th:src="${#themes.code('viewAsListImage')}" alt="" class="headerSelected" style="margin-right:8px" onclick="setViewAsList(true)"/>
-    <img id="viewAsGrid" th:src="${#themes.code('viewAsGridImage')}" alt="" class="headerNotSelected" onclick="setViewAsList(false)"/>
+    <img id="viewAsList" th:src="${themes.get('viewAsListImage')}" alt="" class="headerSelected" style="margin-right:8px" onclick="setViewAsList(true)"/>
+    <img id="viewAsGrid" th:src="${themes.get('viewAsGridImage')}" alt="" class="headerNotSelected" onclick="setViewAsList(false)"/>
 </div>
 <div style="clear:both"></div>
 
